--- a/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
@@ -40,7 +40,7 @@
         <div class="label_item">{{'contract-template.code' | translate}} <span class="require_star">*</span></div>
         <div class="input-group">
           <!-- <input type="text" [(ngModel)]="contract_no" class="input_text" (keyup)="contractNumberValid()"/> -->
-          <input type="text" [(ngModel)]="contract_no" maxlength="32" class="input_text" (keyup)="contractNumberValid()"/>
+          <input type="text" [(ngModel)]="contract_no" maxlength="32" class="input_text" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" (keyup)="contractNumberValid()"/>
         </div>
       </div>
       <div class="form-group">
