--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -31,7 +31,7 @@
             <div class="col-md-6">
                 <div class="label text-color">{{'unit.code' | translate }} <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <input type="text" formControlName="code">
+                    <input type="text" formControlName="code" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                 </div>
                 <div *ngIf="submitted && f.code.errors" class="invalid">
                     <div *ngIf="f.code.errors.required">{{'error.unit.code.required' | translate}}</div>
