--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -497,9 +497,10 @@
                   <div class="participants__name" style="width: 90%">
                     <div class="label text-color">{{'user.sign-type' | translate}}: <span
                       class="required-title">*</span></div>
+                      <!-- signTypeList_personal_partner -->
                     <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
                                              [settings]="dropdownSignTypeSettings"
-                                             [data]="signTypeList_personal_partner"
+                                             [data]="signTypeList"
                                              (ngModelChange)="selectWithOtp($event, d)">
                       <ng-template #optionsTemplate let-item let-option="option"
                                    let-id="id" let-isSelected="isSelected">
@@ -543,12 +544,12 @@
 </div>
 
 <!--ẩn tạm thời-->
-<!--<div style="display: flex">-->
-<!--  <div style="margin-right: 80px"></div>-->
-<!--  <div style="display: inline-block; cursor: pointer">-->
-<!--    <u class="label text-color" (click)="addPartner()" style="background-color: #FFFFFF">{{'them_doi_tac' | translate}}</u>-->
-<!--  </div>-->
-<!--</div>-->
+<div style="display: flex">
+  <div style="margin-right: 80px"></div>
+  <div style="display: inline-block; cursor: pointer">
+    <u class="label text-color" (click)="addPartner()" style="background-color: #FFFFFF">{{'them_doi_tac' | translate}}</u>
+  </div>
+</div>
 
 <div class="footer-determine" style="display: flex; justify-content: space-between">
   <div style="width: 200px;">
