--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -11,7 +11,7 @@
       <label><input type="radio" name="type" (change)="changeAddContract('/main/form-contract-batch/add')"> {{'contract.by-batch' | translate}}</label>
     </div>
   </div> -->
- 
+
   <div class="row">
     <div class="col-md-12">
       <div class="form-group">
@@ -52,7 +52,7 @@
         <div class="label_item">{{'contract.number' | translate}}</div>
         <div class="input-group">
           <!-- <input type="text" [(ngModel)]="contract_no" class="input_text" (keyup)="contractNumberValid()"/> -->
-          <input type="text" [(ngModel)]="contract_no" maxlength="32" class="input_text" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" />
+          <input type="text" [(ngModel)]="contract_no" maxlength="32" class="input_text" />
         </div>
       </div>
       <div class="form-group">
