add icon hoan thanh

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -73,6 +73,9 @@
             <div class="div_icon" *ngIf="(item.status == 1) && item.role == 4">
               <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSecretaryContract(item)">{{'contract.document' | translate}}</button>
             </div>
+            <div class="div_icon" *ngIf="item.contractStatus == '30'">
+              <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
+            </div>
           </div>
         </div>
       </div>
