--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -7,7 +7,10 @@
     <app-contract-form-header *ngIf="type == 2" #contractHeader [AddComponent]="this" [datasForm]="datasForm" [stepForm]="stepForm"
         (messageEvent)="receiveMessage($event)"></app-contract-form-header>
 
-    <div class="row" style="margin: 0 18%">
+    <app-contract-batch-header *ngIf="type == 3" #contractHeader [AddComponent]="this" [datasBatch]="datasBatch" [stepBatch]="stepBatch"
+        (messageEvent)="receiveMessage($event)"></app-contract-batch-header>
+
+    <div class="row" style="margin: 0">
         <div class="radio col-md-4 label_type">
             <label>
                 <input type="radio" name="contract_create" [value]="1" [(ngModel)]="type"
@@ -19,10 +22,10 @@
             <label><input type="radio" name="contract_create" [value]="2" [(ngModel)]="type"
                     (change)="changeType($event)" [disabled]="is_disable">
                 <span> {{'contract.by-template' | translate}}</span></label>
-        </div>
+        </div> 
         <div class="radio col-md-4 label_type">
             <label><input type="radio" name="contract_create" [value]="3" [(ngModel)]="type"
-                    (change)="changeType($event)" [disabled]="true">
+                    (change)="changeType($event)" [disabled]="is_disable">
                 <span> {{'contract.by-batch' | translate}}</span></label>
         </div>
     </div>
@@ -54,7 +57,8 @@
     </ng-container>
 
     <ng-container *ngIf="type == 3">
-        Hợp đồng theo lô
+        <app-infor-contract-batch #infoContractBatch *ngIf="stepBatch == 'infor-contract-batch'" [datasBatch]="datasBatch" [stepBatch]="stepBatch" (stepChangeInfoContractBatch)="getStep($event)"></app-infor-contract-batch>
+        <app-confirm-contract-batch #confirmContractBatch *ngIf="stepBatch == 'confirm-contract-batch'" [datasBatch]="datasBatch" [stepBatch]="stepBatch" (stepChangeConfirmInforContractBatch)="getStep($event)"></app-confirm-contract-batch>
     </ng-container>
 </div>
 <div
