--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -13,11 +13,10 @@
       </div>
       <hr>
   
-      <div style="max-height: calc(100vh - 550px);
-      height: calc(100vh - 550px);
-      overflow-y: auto;
+      <div style="max-height: calc(100vh - 400px);
+      height: calc(100vh - 400px);
+      overflow: hidden auto;
       position: relative;">
-      <perfect-scrollbar>
       <div>
         <div class="sample-contract__information--user-sign" style="line-height: 25px">
           <div style="text-align: center;" class="label">THÔNG TIN CÁC BÊN KÝ</div>
@@ -96,7 +95,6 @@
           </div>
         </div>
       </div>
-    </perfect-scrollbar>
   </div>
     </div>
   
@@ -125,7 +123,7 @@
         <button type="button" name="next" class="next action-button"
             style="background-color: #8B8B8B">Quay lại</button>
         <div>
-            <button type="button" name="next" class="next action-button">Tiếp theo</button>
+            <button type="button" name="next" class="next action-button">Hoàn thành</button>
         </div>
     </div>
   
