--- a/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
@@ -4,8 +4,11 @@
       <div class="col-md-12">
         <div class="form-group">
           <div class="label_item">{{'contract-template.name' | translate}} <span class="require_star">*</span></div>
-          <div class="input-group">
-            <input type="text" [(ngModel)]="name" class="form-control"/>
+          <div>
+            <p-dropdown panelStyleClass="font" [options]="typeListForm" [(ngModel)]="name" 
+              optionLabel="name" optionValue="id" placeholder="Chọn hợp đồng" [filter]="true" filterBy="name"
+              (onChange)="OnChangeForm($event)">
+            </p-dropdown>
           </div>
         </div>
         <div class="form-group">
@@ -39,7 +42,7 @@
       <div class="col-md-12">
         <div class="form-group">
           <div style="padding-top: 10px;">
-            Bạn chưa có file mẫu? <a style="color: #106DB6; cursor: pointer;">Tải file mẫu</a>
+            Bạn chưa có file mẫu? <a style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">Tải file mẫu</a>
           </div>
         </div>
       </div>
