--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -52,7 +52,7 @@
         <div class="label_item">{{'contract.number' | translate}}</div>
         <div class="input-group">
           <!-- <input type="text" [(ngModel)]="contract_no" class="input_text" (keyup)="contractNumberValid()"/> -->
-          <input type="text" [(ngModel)]="contract_no" maxlength="32" class="input_text" />
+          <input type="text" [(ngModel)]="contract_no" maxlength="32" class="input_text" oninput="this.value = this.value.replace(/[^a-zA-Z0-9!@#$&()-`.+,_]/g ,'', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"/>
         </div>
       </div>
       <div class="form-group">
