--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -75,7 +75,7 @@
              [ngClass]="changeColorDrag(null, true)"
              [ngStyle]="changePosition(d)">
           <div class="name-sig-img-daky">{{(d.name && !d.value) ? d.name : ''}}</div>
-          <app-image-sign-contract-detail *ngIf="!d.value" [datas]="datasBatch" [sign]="d"></app-image-sign-contract-detail>
+          <app-image-sign-contract-detail  [datas]="datasBatch" [sign]="d"></app-image-sign-contract-detail>
         </div>
       </div>
     </div>
