--- a/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
@@ -28,7 +28,7 @@
           <div class="file-contract" (click)="addFile()">
             <img src="assets/img/icon_file_excel.svg" alt="mobifone.contract">
             <div style="padding-top: 7px;"><span style="color: #798693;" *ngIf="!this.datasBatch.file_name">{{'choose.document.file.excel' | translate }}</span>{{this.datasBatch.file_name}}</div>
-            <div style="padding-top: 7px;" *ngIf="errorDetail.length > 0">
+            <div style="padding-top: 7px;" *ngIf="errorDetail && errorDetail.length > 0">
               <span style="color: red;">Dữ liệu không hợp lệ. Tổng số {{errorDetail.length}} lỗi</span>
             </div>
             <div style="padding-top: 7px;" *ngFor="let item of errorDetail; let i = index">
@@ -49,7 +49,7 @@
         <div class="form-group">
           <div style="padding-top: 10px;">
             Bạn chưa có file mẫu? <a style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">Tải file mẫu</a>
-          </div>
+          </div>  
         </div>
       </div>
     </div>
