--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -74,7 +74,7 @@
               <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSecretaryContract(item)">{{'contract.document' | translate}}</button>
             </div>
             <div class="div_icon" *ngIf="item.contractStatus == '30'">
-              <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
+              <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.contractId);" />
             </div>
           </div>
         </div>
