fix contract batch

--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -83,7 +83,7 @@
   </div>
     </div>
     <div class="footer-sample-contract">
-        <button type="button" name="next" class="next action-button"
+        <button (click)="back($event, 'infor-contract-batch')" type="button" name="next" class="next action-button"
             style="background-color: #8B8B8B">Quay lại</button>
         <div>
             <button (click)="next()" type="button" name="next" class="next action-button">Hoàn thành</button>
