--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -13,3 +13,10 @@
   outline: none;
   color: #106DB6;
 }
+
+#input-text-value {
+  width: 100%;
+  background-color: rgb(235, 248, 255);
+  border: none;
+  outline: none;
+}
