--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -14,7 +14,7 @@
   color: #106DB6;
 }
 
-#input-text-value {
+#input-text-value, #input-number-value {
   width: 100%;
   background-color: rgb(235, 248, 255);
   border: none;
