--- a/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
@@ -15,7 +15,7 @@
   <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
     <!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
   
-    <div class="skeleton-sign"  *ngIf="!checkShowEdit && !sign.value">
+    <div class="skeleton-sign">
       <span id="input-text" [ngbTooltip]="sign.value ? sign.value : ''">{{sign.value ? sign.value : ((sign.sign_unit == 'text') ? 'Text' : 'Số hợp đồng')}}</span>
     </div>
     <div class="skeleton-sign" *ngIf="checkShowEdit && !sign.valueSign">
