--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -1,11 +1,19 @@
 <div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
-  <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" alt="mobifone.contract">
+  <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'"
+    alt="mobifone.contract">
   <span style="color: #106DB6;">{{sign.sign_unit == 'chu_ky_anh' ? 'Chữ ký ảnh' : 'Chữ ký số'}}</span>
 </div>
 
-<div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
-<!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
+<div class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && !signTemplate">
+  <!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
+  <span id="input-text">{{getText(sign)}}</span>
+</div>
+
+<div class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && signTemplate">
+  <!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
   <span *ngIf="!sign.is_have_text && sign.recipient_id" id="input-text">{{getText(sign)}}</span>
-  <input *ngIf="sign.is_have_text && sign.sign_unit == 'text'" id="input-text-value" placeholder="Nhập nội dung Text.." [ngModel]="sign.value" type="text" (ngxInputSearch)="doTheSearch($event)">
-  <input *ngIf="sign.sign_unit == 'so_tai_lieu' && !sign.recipient_id" id="input-number-value" [ngModel]="sign.value" placeholder="Nhập số hợp đồng.." type="text" (ngxInputSearch)="doTheSearch($event)">
+  <input *ngIf="sign.is_have_text && sign.sign_unit == 'text'" id="input-text-value" placeholder="Nhập nội dung Text.."
+    [ngModel]="sign.value" type="text" (ngxInputSearch)="doTheSearch($event)">
+  <input *ngIf="sign.sign_unit == 'so_tai_lieu' && !sign.recipient_id" id="input-number-value" [ngModel]="sign.value"
+    placeholder="Nhập số hợp đồng.." type="text" (ngxInputSearch)="doTheSearch($event)">
 </div>
