--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -68,18 +68,30 @@
         </div>
       </div>
       <div class="body">
-        <div class="row">
+        <div class="row" style="margin: 0 1%;">
           <div class="col-md-6" style="text-align: center;">
             <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="search()"></p-selectButton>
           </div>
           <div class="col-md-6">
-            <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="filter_from_date" [showIcon]="true" dateFormat="dd/mm/yy" (onSelect)="searchCountCreate()"></p-calendar>
+            <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy" (onSelect)="searchCountCreate()"></p-calendar>
+          </div>
+          <div style="padding-top: 10px;" *ngIf="isOrg=='on'">
+            <p-dropdown 
+              panelStyleClass="font"
+              [options]="orgList" 
+              [(ngModel)]="organization_id" 
+              optionLabel="name" 
+              optionValue="id" 
+              [filter]="true" 
+              filterBy="name" 
+              (onChange)="search()"
+              ></p-dropdown>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div *ngIf="totalCreate == 0" 
-              style="height: 421px;display: table;top: 0;left: 0;width: 100%;text-align: center;">
+            <div *ngIf="totalCreate == 0"
+              style="height:421px;display: table;top: 0;left: 0;width: 100%;text-align: center;">
               <div style="display: table-cell;vertical-align: middle;">
                 <img src="../../../assets/img/empty_data.svg"/>
                 <div style="color: #94A7C6">{{'no.data' | translate}}</div>
@@ -107,7 +119,7 @@
           <div style="color: #94A7C6">{{'no.data' | translate}}</div>
         </div>
       </div>
-        <div *ngIf="listNotification.length > 0" style="min-height: 453px;"> 
+        <div *ngIf="listNotification.length > 0" [ngStyle]="{ 'min-height': isOrg=='on'? '494px':' 453px'}" style="min-height: 453px;"> 
           <div *ngFor="let item of listNotification; let i = index" [style.border-bottom]="i != listNotification.length-1 ? '1px solid #C7D0E9' : ''" style="padding: 4px;">
             <div class="row">
               <div class="col-md-12 item_contract_name" (click)="openLinkNotification(item.notice_url, item.id)">{{item.notice_name}}</div>
