--- a/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
+++ b/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
@@ -27,7 +27,7 @@
           </div>
           <div>
             <span class="title-contract">Thời gian tạo:</span>
-            <span>{{datas?.is_data_contract?.created_at | date: 'dd/MM/yyyy HH:MM'}}</span>
+            <span>{{datas?.is_data_contract?.created_at | date: 'dd/MM/yyyy HH:mm'}}</span>
           </div>
           <div>
             <span class="title-contract">Thời gian hiệu lực:</span>
